Updated Czech translation by Lucas Lommer
2009-02-18  Andre Klapper  <a9016009@gmx.de>

	* cs.po: Updated Czech translation by Lucas Lommer


svn path=/trunk/; revision=14969

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-18  Andre Klapper  <a9016009@gmx.de>
+
+	* cs.po: Updated Czech translation by Lucas Lommer
+
 2009-02-18  Priit Laes  <plaes at svn dot gnome dot org>
 
 	* et.po: Translation updated by Ivar Smolin
