tamil translation updated
svn path=/trunk/; revision=14970

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-19  I. Felix <ifelix@redhat.com>
+
+	* ta.po:  Tamil Translation updated by Tirumurthi Vasudevan
+
 2009-02-18  Andre Klapper  <a9016009@gmx.de>
 
 	* cs.po: Updated Czech translation by Lucas Lommer
