--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-19  Gabor Kelemen  <kelemeng@gnome.hu>
+
+	* hu.po: Translation updated.
+
 2009-02-19  I. Felix <ifelix@redhat.com>
 
 	* ta.po:  Tamil Translation updated by Tirumurthi Vasudevan
