--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-02-20  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-file-operations.c (copy_move_file):
+	Better string for previous commit.
+
 2009-02-18  Alexander Larsson  <alexl@redhat.com>
 
 	Bug 565610 – Replacing folder with file from within that folder destroys both
