--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-20  Sweta Kothari  <swkothar@redhat.com>
+
+	* gu.po: Committed Gujarati Translation.
+
 2009-02-20  Priit Laes  <plaes at svn dot gnome dot org>
 
 	* et.po: Translation updated by Mattias Põldaru
