Updated French translation by Bruno Brouard.
2009-02-20  Claude Paroz  <claude@2xlibre.net>

	* fr.po: Updated French translation by Bruno Brouard.

svn path=/trunk/; revision=14978

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-20  Claude Paroz  <claude@2xlibre.net>
+
+	* fr.po: Updated French translation by Bruno Brouard.
+
 2009-02-20  Sweta Kothari  <swkothar@redhat.com>
 
 	* gu.po: Committed Gujarati Translation.
