--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-20  Daniel Nylander <po@danielnylander.se>
+
+	* sv.po: Updated Swedish translation.
+
 2009-02-20  Claude Paroz  <claude@2xlibre.net>
 
 	* fr.po: Updated French translation by Bruno Brouard.
