--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2009-02-20  Jani Monoses  <jani@ubuntu.com>
+
+	* ro.po: Updated Romanian translation
+	by Adi Roiban <adi@roiban.ro>
+
 2009-02-20  Daniel Nylander <po@danielnylander.se>
 
 	* sv.po: Updated Swedish translation.
