--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-21  Christian Kirbach  <Christian.Kirbach@googlemail.com>
+
+	* de.po: Updated German translation.
+
 2009-02-20  Jani Monoses  <jani@ubuntu.com>
 
 	* ro.po: Updated Romanian translation
