--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-21  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* configure.in: explicitely depend on gthread (#572604).
+
 2009-02-20  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-icon-container.c (style_set):
