Credit the patch author for the last commit.
svn path=/trunk/; revision=14989

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2009-02-21  Cosimo Cecchi  <cosimoc@gnome.org>
 
-	* configure.in: explicitely depend on gthread (#572604).
+	* configure.in: explicitely depend on gthread.
+	Patch by Damien Lespiau (#572604).
 
 2009-02-20  Alexander Larsson  <alexl@redhat.com>
 
