remove unneeded and obsolete snippets of autofoo.
2009-02-21  Cosimo Cecchi  <cosimoc@gnome.org>

	* configure.in:
	* test/Makefile.am: remove unneeded and obsolete snippets of
	autofoo.

svn path=/trunk/; revision=14990

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2009-02-21  Cosimo Cecchi  <cosimoc@gnome.org>
 
+	* configure.in:
+	* test/Makefile.am: remove unneeded and obsolete snippets of
+	autofoo.
+
+2009-02-21  Cosimo Cecchi  <cosimoc@gnome.org>
+
 	* configure.in: explicitely depend on gthread.
 	Patch by Damien Lespiau (#572604).
 
