check if the mtime attribute is actually available.
2009-02-23  Paolo Borelli  <pborelli@katamail.com>

	* libnautilus-private/nautilus-thumbnails.c: check if the mtime
	attribute is actually available.


svn path=/trunk/; revision=14994

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-02-23  Paolo Borelli  <pborelli@katamail.com>
+
+	* libnautilus-private/nautilus-thumbnails.c: check if the mtime
+	attribute is actually available.
+
 2009-02-23  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* libnautilus-private/nautilus-thumbnails.c (get_types_table):
