Updated Dutch translation by Wouter Bolsterlee.
2009-02-23  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* nl.po: Updated Dutch translation by Wouter Bolsterlee.

svn path=/trunk/; revision=14995

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-23  Wouter Bolsterlee  <wbolster@svn.gnome.org>
+
+	* nl.po: Updated Dutch translation by Wouter Bolsterlee.
+
 2009-02-23  Priit Laes  <plaes at svn dot gnome dot org>
 
 	* et.po: Translation updated by Ivar Smolin
@@ -1089,7 +1093,7 @@
 
 	* mk.po: Updated Macedonian translation.
 
-2008-06-02   Clytie Siddall <clytie@riverland.net.au>
+2008-06-02  Clytie Siddall <clytie@riverland.net.au>
 
 	* vi.po: Updated Vietnamese translation.
 
@@ -1928,7 +1932,7 @@
 
 	* be@latin.po: Updated Belarusian Latin translation.
 
-2008-01-05   Clytie Siddall <clytie@riverland.net.au>
+2008-01-05  Clytie Siddall <clytie@riverland.net.au>
 
 	* vi.po: Updated Vietnamese translation.
 
