--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-23  Gil Forcada  <gforcada@gnome.org>
+
+	* ca.po: Updated Catalan translation by Joan Duran.
+
 2009-02-23  Wouter Bolsterlee  <wbolster@svn.gnome.org>
 
 	* nl.po: Updated Dutch translation by Wouter Bolsterlee.
