--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-23  Gabor Kelemen  <kelemeng@gnome.hu>
+
+	* hu.po: Translation updated.
+
 2009-02-23  Gil Forcada  <gforcada@gnome.org>
 
 	* ca.po: Updated Catalan translation by Joan Duran.
