Capitalize words in button.
2009-02-24  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-mime-actions.c (activate_desktop_file):
	Capitalize words in button.



svn path=/trunk/; revision=15004

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-02-24  Alexander Larsson  <alexl@redhat.com>
 
+	* libnautilus-private/nautilus-mime-actions.c (activate_desktop_file):
+	Capitalize words in button.
+
+2009-02-24  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-directory-async.c:
 	Check for trusted desktop file launchers.
 
