--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-24  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
+
+	* es.po: Updated Spanish translation by Juan Jesus Ojeda
+
 2009-02-23  Gil Forcada  <gforcada@gnome.org>
 
 	* ca.po: Updated Catalan translation.
