--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-24  Jorge Gonzalez  <jorgegonz@svn.gnome.org>   
+
+	* es.po: Updated Spanish translation by Juan Jesús Ojeda and me
+
 2009-02-24  Daniel Nylander <po@danielnylander.se>
 
 	* sv.po: Updated Swedish translation.
