--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-24  Philip Withnall  <philip@tecnocode.co.uk>
+
+	* en_GB.po: Updated British English translation.
+
 2009-02-24  Jorge Gonzalez  <jorgegonz@svn.gnome.org>   
 
 	* es.po: Updated Spanish translation by Juan Jesús Ojeda and me
