Updated Polish translation
2009-02-24  Wadim Dziedzic  <wdziedzic@aviary.pl>

	* pl.po: Updated Polish translation

svn path=/trunk/; revision=15014

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-24  Wadim Dziedzic  <wdziedzic@aviary.pl>
+
+	* pl.po: Updated Polish translation
+
 2009-02-24  Philip Withnall  <philip@tecnocode.co.uk>
 
 	* en_GB.po: Updated British English translation.
