Updated Dutch translation by Wouter Bolsterlee.
2009-02-24  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* nl.po: Updated Dutch translation by Wouter Bolsterlee.


svn path=/trunk/; revision=15015

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-24  Wouter Bolsterlee  <wbolster@svn.gnome.org>
+
+	* nl.po: Updated Dutch translation by Wouter Bolsterlee.
+
 2009-02-24  Wadim Dziedzic  <wdziedzic@aviary.pl>
 
 	* pl.po: Updated Polish translation
