remove obsolete test.
2009-02-24  Cosimo Cecchi  <cosimoc@gnome.org>

	* test/test-eel-widgets.c: remove obsolete test.

svn path=/trunk/; revision=15016

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-24  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* test/test-eel-widgets.c: remove obsolete test.
+
 2009-02-24  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-file-operations.c:
