Don't ref pixbuf if it is NULL
2009-02-26  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-directory-view.c (add_submenu):
	Don't ref pixbuf if it is NULL


svn path=/trunk/; revision=15022

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-02-26  Alexander Larsson  <alexl@redhat.com>
+
+	* src/file-manager/fm-directory-view.c (add_submenu):
+	Don't ref pixbuf if it is NULL
+
 2009-02-25  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-file-operations.c (copy_files):
