Updated Finnish translation
svn path=/trunk/; revision=15025

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-26  Ilkka Tuohela <hile@iki.fi>
+
+	* fi.po: Updated Finnish translation.
+
 2009-02-26  Changwoo Ryu  <cwryu@debian.org>
 
 	* ko.po: Updated Korean translation.
