--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-26  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* nb.po: Updated Norwegian bokmål translation.
+
 2009-02-26  Ilkka Tuohela <hile@iki.fi>
 
 	* fi.po: Updated Finnish translation.
