--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-38  Yair Hershkovitz  <yairhr@gmail.com>
+
+	* he.po: Updated Hebrew translation.
+
 2009-02-28  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>
 
 	* zh_HK.po: Updated Traditional Chinese translation(Hong Kong).
