--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-01  Tomasz Dominikowski  <tdominikowski@aviary.pl>
+
+	* pl.po: Updated Polish translation
+
 2009-02-28  Gabor Kelemen  <kelemeng@gnome.hu>
 
 	* hu.po: Translation updated.
