--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-02  I. Felix <ifelix@redhat.com>
+
+	* ta.po:  Tamil Translation updated by Tirumurthi Vasudevan
+
 2009-03-02  Shankar Prasad  <svenkate@redhat.com>
 
         * kn.po: Updated Kannada translations.
