Update for release
2009-03-02  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release



svn path=/trunk/; revision=15036

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-03-02  Alexander Larsson  <alexl@redhat.com>
+
+	* NEWS:
+	Update for release
+
 2009-02-26  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-file-operations.c:
