--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,5 @@
+=== nautilus 2.25.92 ===
+
 2009-03-02  I. Felix <ifelix@redhat.com>
 
 	* ta.po:  Tamil Translation updated by Tirumurthi Vasudevan
