--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-02  Hendrik Richter  <hendrikr@gnome.org>
+
+	* de.po: Updated German translation.
+
 === nautilus 2.25.92 ===
 
 2009-03-02  I. Felix <ifelix@redhat.com>
