Updated German translation.
2009-03-02  Hendrik Richter  <hendrikr@gnome.org>

	* de.po: Updated German translation.

svn path=/trunk/; revision=15040

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -2,6 +2,10 @@
 
 	* de.po: Updated German translation.
 
+2009-03-02  Hendrik Richter  <hendrikr@gnome.org>
+
+	* de.po: Updated German translation.
+
 === nautilus 2.25.92 ===
 
 2009-03-02  I. Felix <ifelix@redhat.com>
