Updated Italian translation by Luca Ferretti
svn path=/trunk/; revision=15041

--- a/po/it.po
+++ b/po/it.po
@@ -11,8 +11,8 @@ msgstr ""
 "Project-Id-Version: nautilus 2.25.x\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=nautilus&component=Internationalization (i18n)\n"
-"POT-Creation-Date: 2009-02-26 08:32+0000\n"
-"PO-Revision-Date: 2009-02-23 18:50+0100\n"
+"POT-Creation-Date: 2009-02-27 11:32+0000\n"
+"PO-Revision-Date: 2009-03-02 19:31+0100\n"
 "Last-Translator: Luca Ferretti <elle.uca@libero.it>\n"
 "Language-Team: Italian <tp@lists.linux.it>\n"
 "MIME-Version: 1.0\n"
@@ -2588,7 +2588,7 @@ msgstr "Si è verificato un errore nel creare la directory in «%F»."
 #: ../libnautilus-private/nautilus-file-operations.c:6177
 #: ../libnautilus-private/nautilus-file-operations.c:6212
 msgid "Unable to mark launcher trusted (executable)"
-msgstr ""
+msgstr "Impossibile contrassegnare il lanciatore fidato (eseguibile)"
 
 #: ../libnautilus-private/nautilus-file.c:886
 #: ../libnautilus-private/nautilus-vfs-file.c:264
@@ -3213,10 +3213,9 @@ msgstr ""
 "Cercare un'applicazione capace di aprire questo file?"
 
 #: ../libnautilus-private/nautilus-mime-actions.c:1345
-#, fuzzy
 #| msgid "Choose what application to launch."
 msgid "Untrusted application launcher"
-msgstr "Scegliere quale applicazione lanciare."
+msgstr "Lanciatore di applicazione non fidato"
 
 #: ../libnautilus-private/nautilus-mime-actions.c:1348
 #, c-format
@@ -3224,14 +3223,17 @@ msgid ""
 "The application launcher \"%s\" has not been marked as trusted. If you do "
 "not know the source of this file, launching it may be unsafe."
 msgstr ""
+"Il lanciatore di applicazioni «%s» non è stato contrassegnato come fidato. Se "
+"non si conosce l'origine di questo file, lanciarlo potrebbe non essere "
+"sicuro."
 
 #: ../libnautilus-private/nautilus-mime-actions.c:1360
 msgid "_Launch Anyway"
-msgstr ""
+msgstr "_Lancia comunque"
 
 #: ../libnautilus-private/nautilus-mime-actions.c:1363
 msgid "Mark as _Trusted"
-msgstr ""
+msgstr "Contrassegna come _fidato"
 
 #: ../libnautilus-private/nautilus-mime-actions.c:1634
 #: ../libnautilus-private/nautilus-mime-actions.c:1892
