Updated Bulgarian translation by Alexander Shopov <ash@contact.bg>
2009-03-03  Alexander Shopov  <ash@contact.bg>

	* bg.po: Updated Bulgarian translation by
	Alexander Shopov <ash@contact.bg>

svn path=/trunk/; revision=15043

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -3,6 +3,11 @@
 	* bg.po: Updated Bulgarian translation by
 	Alexander Shopov <ash@contact.bg>
 
+2009-03-03  Alexander Shopov  <ash@contact.bg>
+
+	* bg.po: Updated Bulgarian translation by
+	Alexander Shopov <ash@contact.bg>
+
 2009-03-02  Milo Casagrande <milo@ubuntu.com>
 
 	* it.po: Updated Italian translation by Luca Ferretti
