--- a/po/bg.po
+++ b/po/bg.po
@@ -4,7 +4,7 @@
 # Borislav Aleksandrov <B.Aleksandrov@cnsys.bg>, 2002.
 # Vladimir Petkov <kaladan@gmail.com>, 2004, 2005, 2006, 2007.
 # Rostislav "zbrox" Raykov <zbrox@i-space.org>,2004, 2005, 2006.
-# Alexander Shopov <ash@contact.bg>, 2002, 2006, 2007, 2008.
+# Alexander Shopov <ash@contact.bg>, 2002, 2006, 2007, 2008, 2009.
 # Yavor Doganov <yavor@gnu.org>, 2008.
 #
 #
