Added entries for Oriya language Translation updation.
svn path=/trunk/; revision=15045

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-03  Manoj Kumar Giri  <mgiri@redhat.com>
+
+	* or.po: Upadted Oriya Translation.
+
 2009-03-03  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
