--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2009-03-03  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* src/nautilus-application.c (nautilus_application_finalize),
+	(ck_session_active_changed_cb), (ck_call_is_active_cb),
+	(ck_get_current_session), (do_initialize_consolekit),
+	(ck_get_current_session_cb), (finish_startup),
+	(mount_added_callback):
+	* src/nautilus-application.h: use ConsoleKit to find out whether
+	we are on the currently active session. If we don't, inhibit autorun
+	dialogs (#573577).
+
 2009-03-02  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
