Updated Japanese translation.
2009-03-04  Takeshi AIHANA <takeshi.aihana@gmail.com>

	* ja.po: Updated Japanese translation.

svn path=/trunk/; revision=15047

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-04  Takeshi AIHANA <takeshi.aihana@gmail.com>
+
+	* ja.po: Updated Japanese translation.
+
 2009-03-03  Manoj Kumar Giri  <mgiri@redhat.com>
 
 	* or.po: Upadted Oriya Translation.
