--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2009-03-02  A. Walton  <awalton@gnome.org>
+
+	* libnautilus-private/nautilus-link.c
+	(nautilus_link_local_set_key), 
+	(nautilus_link_local_set_text),
+	(nautilus_link_local_set_icon):
+	Don't localize 'Icon=' keys.
+	Fixes Launchpad Bug #336679.
+	
 2009-03-03  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* src/nautilus-application.c (nautilus_application_finalize),
