Updated French translation by Laurent Coudeur and Bruno Brouard.
2009-03-03  Claude Paroz  <claude@2xlibre.net>

	* fr.po: Updated French translation by Laurent Coudeur and Bruno Brouard.

svn path=/trunk/; revision=15051

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-03  Claude Paroz  <claude@2xlibre.net>
+
+	* fr.po: Updated French translation by Laurent Coudeur and Bruno Brouard.
+
 2009-03-04  Takeshi AIHANA <takeshi.aihana@gmail.com>
 
 	* ja.po: Updated Japanese translation.
