--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2009-03-04  Alexander Larsson  <alexl@redhat.com>
+
+	Bug 573991 – Nautilus does not recognize some .desktop files as launchers
+
+        * libnautilus-private/nautilus-link.c:
+        (nautilus_link_get_link_info_given_file_contents):
+	Don't try to sniff the contents, we'll handle that when parsing anyway.
+	And sniffing breaks if there are too much comments before the first group in
+	the desktop file.
+
 2009-03-03  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* src/nautilus-application.c (nautilus_application_finalize),
@@ -22,7 +32,7 @@
 	(nautilus_link_local_set_icon):
 	Don't localize 'Icon=' keys.
 	Fixes Launchpad Bug #336679.
-	
+
 2009-03-03  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* src/nautilus-application.c (nautilus_application_finalize),
