Updated Polish translation
2009-03-05  Tomasz Dominikowski  <tdominikowski@aviary.pl>

	* pl.po: Updated Polish translation

svn path=/trunk/; revision=15055

--- a/po/pl.po
+++ b/po/pl.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-03-05 11:43+0100\n"
-"PO-Revision-Date: 2009-03-05 11:46+0100\n"
+"PO-Revision-Date: 2009-03-05 12:13+0100\n"
 "Last-Translator: Tomasz Dominikowski <dominikowski@gmail.com>\n"
 "Language-Team: Polish <gnomepl@aviary.pl>\n"
 "MIME-Version: 1.0\n"
@@ -2643,7 +2643,7 @@ msgstr "Nie można użyć dowiązania, bo jego element docelowy \"%s\" nie istni
 #: ../src/file-manager/fm-directory-view.c:7894
 #: ../src/file-manager/fm-tree-view.c:1293
 msgid "Mo_ve to Trash"
-msgstr "Przenieś do k_osza"
+msgstr "Prz_enieś do kosza"
 
 #: ../libnautilus-private/nautilus-mime-actions.c:678
 #, c-format
@@ -3361,7 +3361,7 @@ msgstr "Proszę wybrać program, za pomocą którego ma zostać otwarty zaznaczo
 #: ../src/file-manager/fm-directory-view.c:6583
 #: ../src/file-manager/fm-directory-view.c:6811
 msgid "_Properties"
-msgstr "_Właściwości"
+msgstr "Wł_aściwości"
 
 #. tooltip
 #: ../src/file-manager/fm-directory-view.c:6576
