--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -2,6 +2,10 @@
 
 	* pl.po: Updated Polish translation
 
+2009-03-05  Tomasz Dominikowski  <tdominikowski@aviary.pl>
+
+	* pl.po: Updated Polish translation
+
 2009-03-03  Claude Paroz  <claude@2xlibre.net>
 
 	* fr.po: Updated French translation by Laurent Coudeur and Bruno Brouard.
