Updated Polish translation
2009-03-05  Tomasz Dominikowski  <tdominikowski@aviary.pl>

	* pl.po: Updated Polish translation

svn path=/trunk/; revision=15056

--- a/po/pl.po
+++ b/po/pl.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-03-05 11:43+0100\n"
-"PO-Revision-Date: 2009-03-05 12:13+0100\n"
+"PO-Revision-Date: 2009-03-05 14:19+0100\n"
 "Last-Translator: Tomasz Dominikowski <dominikowski@gmail.com>\n"
 "Language-Team: Polish <gnomepl@aviary.pl>\n"
 "MIME-Version: 1.0\n"
@@ -1182,7 +1182,7 @@ msgstr "Wkleja tekst zapisany w schowku"
 #: ../libnautilus-private/nautilus-clipboard.c:448
 #: ../src/file-manager/fm-directory-view.c:6655
 msgid "Select _All"
-msgstr "Zaznacz _wszystko"
+msgstr "Z_aznacz wszystko"
 
 #. tooltip
 #: ../libnautilus-private/nautilus-clipboard.c:449
@@ -3043,7 +3043,7 @@ msgstr "Tło"
 #: ../src/file-manager/fm-directory-view.c:6633
 #: ../src/file-manager/fm-directory-view.c:7960
 msgid "E_mpty Trash"
-msgstr "Opróż_nij kosz"
+msgstr "Op_różnij kosz"
 
 #. label, accelerator
 #. name, stock id
@@ -3433,7 +3433,7 @@ msgstr "Otwiera każdy z zaznaczonych elementów w oknie nawigacji"
 #: ../src/file-manager/fm-tree-view.c:1225
 #: ../src/nautilus-places-sidebar.c:1966
 msgid "Open in New _Tab"
-msgstr "Otwórz w nowej _karcie"
+msgstr "O_twórz w nowej karcie"
 
 #. tooltip
 #: ../src/file-manager/fm-directory-view.c:6614
@@ -3505,7 +3505,7 @@ msgstr "Przenosi lub kopiuje pliki poprzednio zaznaczone za pomocą polecenia Sk
 #: ../src/file-manager/fm-directory-view.c:6777
 #: ../src/file-manager/fm-tree-view.c:1277
 msgid "_Paste Into Folder"
-msgstr "Wklej do _katalogu"
+msgstr "Wklej do katalog_u"
 
 #. tooltip
 #: ../src/file-manager/fm-directory-view.c:6652
@@ -3521,7 +3521,7 @@ msgstr "Zaznacza wszystkie elementy w bieżącym oknie"
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6659
 msgid "Select I_tems Matching..."
-msgstr "Zaznacz _elementy pasujące..."
+msgstr "Zaznacz elementy pa_sujące..."
 
 #. tooltip
 #: ../src/file-manager/fm-directory-view.c:6660
@@ -3543,7 +3543,7 @@ msgstr "Zaznacza wszystkie i aktualnie nie zaznaczone elementy"
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6667
 msgid "D_uplicate"
-msgstr "_Powiel"
+msgstr "Powie_l"
 
 #. tooltip
 #: ../src/file-manager/fm-directory-view.c:6668
@@ -3871,7 +3871,7 @@ msgstr[2] "Przenosi zaznaczone elementy z kosza"
 #: ../src/file-manager/fm-tree-view.c:1234
 #: ../src/nautilus-places-sidebar.c:1973
 msgid "Open in New _Window"
-msgstr "Otwórz w nowym _oknie"
+msgstr "Otwórz w nowy_m oknie"
 
 #: ../src/file-manager/fm-directory-view.c:7551
 #: ../src/file-manager/fm-directory-view.c:7817
@@ -4140,7 +4140,7 @@ msgstr "Wyświetla ikony uporządkowane w wierszach według symboli"
 #. name, stock id, label
 #: ../src/file-manager/fm-icon-view.c:1487
 msgid "Arran_ge Items"
-msgstr "Upo_rządkuj elementy"
+msgstr "Uporządkuj elemen_ty"
 
 #. name, stock id
 #. label, accelerator
@@ -4191,7 +4191,7 @@ msgstr "Przełącza użycie bardziej zwartego układu"
 #. label, accelerator
 #: ../src/file-manager/fm-icon-view.c:1509
 msgid "Re_versed Order"
-msgstr "Odw_rócona kolejność"
+msgstr "Odwrócona _kolejność"
 
 #. tooltip
 #: ../src/file-manager/fm-icon-view.c:1510
@@ -4223,7 +4223,7 @@ msgstr "Według _nazwy"
 
 #: ../src/file-manager/fm-icon-view.c:1530
 msgid "By _Size"
-msgstr "Według _rozmiaru"
+msgstr "Według ro_zmiaru"
 
 #: ../src/file-manager/fm-icon-view.c:1534
 msgid "By _Type"
@@ -5462,7 +5462,7 @@ msgstr "Otwiera nowe okno katalogu dla wyświetlanego położenia"
 #. name, stock id, label
 #: ../src/nautilus-navigation-window-menus.c:779
 msgid "Close _All Windows"
-msgstr "Zamknij w_szystkie okna"
+msgstr "Zamknij _wszystkie okna"
 
 #: ../src/nautilus-navigation-window-menus.c:780
 msgid "Close all Navigation windows"
@@ -5471,7 +5471,7 @@ msgstr "Zamyka wszystkie okna nawigacyjne"
 #. name, stock id, label
 #: ../src/nautilus-navigation-window-menus.c:782
 msgid "_Location..."
-msgstr "P_ołożenie..."
+msgstr "_Położenie..."
 
 #: ../src/nautilus-navigation-window-menus.c:783
 #: ../src/nautilus-spatial-window.c:903
@@ -5513,7 +5513,7 @@ msgstr "Wyświetla okno, które pozwala na modyfikację zakładek w tym menu"
 #: ../src/nautilus-navigation-window-menus.c:794
 #: ../src/nautilus-spatial-window.c:917
 msgid "_Search for Files..."
-msgstr "Wy_szukiwanie plików..."
+msgstr "Wysz_ukiwanie plików..."
 
 #: ../src/nautilus-navigation-window-menus.c:795
 #: ../src/nautilus-spatial-window.c:918
@@ -5582,7 +5582,7 @@ msgstr "Zmienia widoczność paska bocznego tego okna"
 #. label, accelerator
 #: ../src/nautilus-navigation-window-menus.c:825
 msgid "Location _Bar"
-msgstr "Pasek p_ołożenia"
+msgstr "Pase_k położenia"
 
 #. tooltip
 #: ../src/nautilus-navigation-window-menus.c:826
@@ -5635,7 +5635,7 @@ msgstr "Przełącza pomiędzy tesktowym i przyciskowym paskiem położenia"
 
 #: ../src/nautilus-navigation-window.c:283
 msgid "_Close Tab"
-msgstr "Z_amknij kartę"
+msgstr "Za_mknij kartę"
 
 #: ../src/nautilus-navigation-window.c:1205
 #, c-format
@@ -6138,7 +6138,7 @@ msgstr "Pomo_c"
 #. label, accelerator
 #: ../src/nautilus-window-menus.c:741
 msgid "_Close"
-msgstr "Z_amknij"
+msgstr "Zamkn_ij"
 
 #. tooltip
 #: ../src/nautilus-window-menus.c:742
@@ -6155,7 +6155,7 @@ msgstr "Wyświetla desenie, kolory i symbole, które mogą być wykorzystane do 
 
 #: ../src/nautilus-window-menus.c:749
 msgid "Prefere_nces"
-msgstr "P_referencje"
+msgstr "_Preferencje"
 
 #: ../src/nautilus-window-menus.c:750
 msgid "Edit Nautilus preferences"
@@ -6173,7 +6173,7 @@ msgstr "Cofa ostatnią zmianę tekstu"
 #. name, stock id, label
 #: ../src/nautilus-window-menus.c:755
 msgid "Open _Parent"
-msgstr "_Nadrzędny"
+msgstr "N_adrzędny"
 
 #: ../src/nautilus-window-menus.c:756
 msgid "Open the parent folder"
@@ -6323,7 +6323,7 @@ msgstr "Otwiera osobisty katalog kosza"
 #. label, accelerator
 #: ../src/nautilus-window-menus.c:829
 msgid "Show _Hidden Files"
-msgstr "Wyświetlanie _ukrytych plików"
+msgstr "Wyświetlanie ukrytyc_h plików"
 
 #. tooltip
 #: ../src/nautilus-window-menus.c:830
