Updated Polish translation
2009-03-05  Tomasz Dominikowski  <tdominikowski@aviary.pl>

	* pl.po: Updated Polish translation

svn path=/trunk/; revision=15057

--- a/po/pl.po
+++ b/po/pl.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-03-05 11:43+0100\n"
-"PO-Revision-Date: 2009-03-05 14:19+0100\n"
+"PO-Revision-Date: 2009-03-05 15:02+0100\n"
 "Last-Translator: Tomasz Dominikowski <dominikowski@gmail.com>\n"
 "Language-Team: Polish <gnomepl@aviary.pl>\n"
 "MIME-Version: 1.0\n"
@@ -4833,7 +4833,7 @@ msgstr "Za_sób:"
 
 #: ../src/nautilus-connect-server-dialog.c:498
 msgid "_Port:"
-msgstr "_Port:"
+msgstr "P_ort:"
 
 #: ../src/nautilus-connect-server-dialog.c:538
 msgid "_User Name:"
@@ -4853,7 +4853,7 @@ msgstr "Połączenie z serwerem"
 
 #: ../src/nautilus-connect-server-dialog.c:804
 msgid "Service _type:"
-msgstr "Ro_dzaj usługi:"
+msgstr "_Rodzaj usługi:"
 
 #: ../src/nautilus-connect-server-dialog.c:898
 msgid "Add _bookmark"
@@ -4861,7 +4861,7 @@ msgstr "_Dodaj zakładkę"
 
 #: ../src/nautilus-connect-server-dialog.c:936
 msgid "C_onnect"
-msgstr "P_ołącz"
+msgstr "_Połącz"
 
 #: ../src/nautilus-desktop-window.c:243
 #: ../src/nautilus-pathbar.c:1244
@@ -5066,7 +5066,7 @@ msgstr "Wyświetlanie"
 
 #: ../src/nautilus-file-management-properties.ui.h:32
 msgid "File Management Preferences"
-msgstr "Ustawienia zarządzania plikami"
+msgstr "Preferencje zarządzania plikami"
 
 #: ../src/nautilus-file-management-properties.ui.h:33
 msgid "I_nclude a Delete command that bypasses Trash"
@@ -6216,7 +6216,7 @@ msgstr "Wyświetla pomoc programu Nautilus"
 #. label, accelerator
 #: ../src/nautilus-window-menus.c:774
 msgid "_About"
-msgstr "_Informacje"
+msgstr "_O programie"
 
 #. tooltip
 #: ../src/nautilus-window-menus.c:775
