--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-05  Jonh Wendell  <jwendell@gnome.org>
+
+	* pt_BR.po: Updated Brazilian Portuguese translation.
+
 2009-02-24  Daniel Nylander <po@danielnylander.se>
 
 	* sv.po: Updated Swedish translation.
